Bugfixes and Additions
- Fixed bug where the wrong qml version was used
- Added Glype Page, to see/check symbol/glyph with associated name/alias
- Changed Acquisition page, neutral symbols now always visible and can
be used to select appeared glyphs

--- a/qml.qrc
+++ b/qml.qrc
@@ -10,5 +10,6 @@
         <file>Encounter3SelectionArea.qml</file>
         <file>Encounter4Rhulk.qml</file>
         <file>GreetingsPage.qml</file>
+        <file>GlyphNaming.qml</file>
     </qresource>
 </RCC>
